# lib-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
lib-ml/: preprocessing.py
lib_ml/: __init__.py  _version.py  preprocessing.py
