[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lib_ml"
dynamic = ["version"]
description = "Shared preprocessing logic"
authors = [
    { name = "remla25-team13" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "pandas==2.2.2",
    "scipy==1.13"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "lib_ml/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["lib_ml"]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"