[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_ml"
dynamic = ["version"]
description = "Shared preprocessing logic"
authors = [
    { name = "remla25-team13" }
]
requires-python = ">=3.12"
dependencies = [
    "scikit-learn==1.6.1",
    "nltk==3.9.1"
]

[tool.setuptools.packages.find]
where = ["."]